# file_transfer

./: .env  README.md  alembic.ini  docker-compose.yml  pyproject.toml  setup.cfg
file_transfer/: config.py  database.py  main.py
file_transfer/migrations/: env.py
file_transfer/migrations/versions/: 1a5ba52d90c5_add_table.py  56fccfd50653_change_table_task.py  78bcbe2839d9_drop_table_from_extension_not_copy.py  ebcb6ad9ffc9_change_table_from_dir.py
file_transfer/models/: models.py
file_transfer/tasks/: model.py  router.py
migrations/: env.py
migrations/versions/: d3eabc409443_database_creation.py
src/: config.py  database.py  exceptions.py  exeptions.py  main.py
src/dao/: base.py
src/migrations/: env.py
src/migrations/versions/: 1c92308b8434_edit_model_schemas.py  307bb6f12261_change_table_from_dir.py  524dcda10cb5_edit_model_tasks.py  54d7ab57745f_initial.py  68a93156a067_change_tables.py  7049ab408a04_init.py  737285099091_initial_db.py  a90eeb4405ae_initial_migrations.py  ac0d4e009347_edit_model_schemas.py
src/tasks/: dao.py  model.py  router.py  schemas.py
src/tasks/copy_extensions/: dao.py  model.py  router.py  schemas.py
src/tasks/from_dirs/: dao.py  model.py  router.py  schemas.py
src/tasks/last_operations/: dao.py  model.py  router.py  schemas.py
src/tasks/to_dirs/: dao.py  model.py  router.py  schemas.py
tests/: test_data.sql  test_file_transfer.py
