[tool.poetry]
name = "file_transfer"
version = "0.1.0"
description = ""
authors = ["VeterAN <vet-an@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.110.2"}
SQLAlchemy = "^2.0.29"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py310']
